--- a/index.html
+++ b/index.html
@@ -1,162 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Free Music</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-          Dropdown link
-        </a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Music Page</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <a class="navbar-brand" href="#">Free Music</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" href="#"
+            >Home <span class="sr-only">(current)</span></a
+          >
+          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">Pricing</a>
         </div>
-      </li>
-    </ul>
-  </div>
-</nav>
+      </div>
+    </nav>
+
     <div class="container">
-        <h1 class="text-center mb-3">Home</h1>
-        <div class="row">
-            <div id="featured" class="p-1.5 col-12">
-                <div class="card fadding" style="height: 450px">
-            <div
-              class="card-body"
-              style="
-                background-image: url(https://static.independentespanol.com/2021/11/18/09/music%20therapy.jpg?quality=75&width=982&height=726&auto=webp);
-                background-repeat: no-repeat;
-                background-size: cover;
-                background-position-y: -36px;
-              "
-            >
-              <h5 class="card-title font-weight-bold fadding">Free Music</h5>
-              <p class="card-text font-weight-bold fadding">
-                Appearing with a <br> fade-in animation effect 
+      <div class="jumbocon text-white">
+        <div class="jumbotron jumbotron-fluid text-white">
+          <div class="container">
+            <h1 class="display-4">Fluid jumbotron</h1>
+            <p class="lead">
+              This is a modified jumbotron that occupies the entire horizontal
+              space of its parent.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <h2 class="text-center">Favorites Albums</h2>
+      <div class="row">
+        <div class="col-3">
+          <div
+            class="card first-card text-white text-center border-0"
+            style="width: 15rem; height: 16rem"
+          >
+            <div class="card-body back-fade">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
               </p>
             </div>
+          </div>
         </div>
-        </div>
-        
-        <div id="music" class="col-12 text-center text-light my-3">
-          <h2 class="m-0">Favorate albums</h2>
-        </div>
-
-        <div class="p-1.5 col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-3">
-          <div class="card card-bbody">
-            <img
-              src="https://i.discogs.com/Qxf5muXJ-tiNOfFkhSxFKOkVGLTTK9bqbTJu4svH2vQ/rs:fit/g:sm/q:40/h:300/w:300/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTE2NzU0/ODg5LTE2MDk2Mjc2/NTgtMjcyNy5qcGVn.jpeg"
-              class="card-img-top"
-              alt="X ambassadors beautiful liar album cover"
-            />
-            <div class="card-body displaying card-hover">
-              <h5 class="card-title">Cowboys from Hell</h5>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">Pantera</li>
-                <li class="list-group-item">Heavy metal</li>
-                <li class="list-group-item">57:41 min</li>
-              </ul>
-              <button type="button" class="btn btn-dark">listen Now</button>
+        <div class="col-3">
+          <div
+            class="card second-card text-white text-center border-0"
+            style="width: 15rem; height: 16rem"
+          >
+            <div class="card-body back-fade">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
             </div>
           </div>
         </div>
-        <div class="p-1.5 col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-3">
-          <div class="card card-bbody">
-            <img
-              src="https://metalstorm.net/images/albums/1/1118.jpg"
-              class="card-img-top"
-              alt="X ambassadors beautiful liar album cover"
-            />
-            <div class="card-body displaying card-hover">
-              <h5 class="card-title">Rust In Peace</h5>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">Megadeth</li>
-                <li class="list-group-item">Thrash metal</li>
-                <li class="list-group-item">57 min 20 sec</li>
-              </ul>
-              <button type="button" class="btn btn-dark">listen Now</button>
+        <div class="col-3">
+          <div
+            class="card third-card text-white text-center border-0"
+            style="width: 15rem; height: 16rem"
+          >
+            <div class="card-body back-fade">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
             </div>
           </div>
         </div>
-        <div class="p-1.5 col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-3">
-          <div class="card card-bbody">
-            <img
-              src="https://i.discogs.com/8bi3fa6FO8Pmd_TOP8BXeBIk4YZT9YGJVTHDbQaZPwE/rs:fit/g:sm/q:90/h:583/w:600/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTEyNDQ5/NTI0LTE2MjAyNjUz/MjUtODA0OS5qcGVn.jpeg"
-              class="card-img-top"
-              alt="X ambassadors beautiful liar album cover"
-            />
-            <div class="card-body displaying card-hover">
-              <h5 class="card-title">Mutter</h5>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">Rammstein</li>
-                <li class="list-group-item">Metal industrial</li>
-                <li class="list-group-item">45 min 05 sec</li>
-              </ul>
-              <button type="button" class="btn btn-dark">listen Now</button>
+        <div class="col-3">
+          <div
+            class="card fourth-card text-white text-center border-0"
+            style="width: 15rem; height: 16rem"
+          >
+            <div class="card-body back-fade">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
             </div>
           </div>
         </div>
-        <div class="p-1.5 col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-3">
-          <div class="card card-bbody">
-            <img
-              src="https://http2.mlstatic.com/D_NQ_NP_333121-MLA20713744871_052016-O.jpg"
-              class="card-img-top"
-              alt="X ambassadors beautiful liar album cover"
-            />
-            <div class="card-body displaying card-hover">
-              <h5 class="card-title">Ten Thousand Fists</h5>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">Disturbed</li>
-                <li class="list-group-item">Hard rock</li>
-                <li class="list-group-item">56 min 25 sec</li>
-              </ul>
-              <button type="button" class="btn btn-dark">listen Now</button>
-            </div>
-          </div>
-        </div>
-
-        <h2 class="mb-3 text-center col-12">Best album for me</h2>
-
-        <div class="card mb-3 col-12">
-            <div class="row">
-              <div class="col-sm-12 col-md-6 col-lg-9 p-0">
-                <img src="https://rockfm-cdnmed.agilecontent.com/resources/jpg/1/5/1658991085551.jpg" class="rounded-left img-fluid" alt="Little People Start shooting Album Cover">
-              </div>
-              <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card-body">
-                  <h5 class="card-title">Ride the Lightning</h5>
-
-                  <p class="card-text">Metallica</p>
-                  <p class="card-text">Tash Metal</p>
-                  <p class="card-text">Metallica</p>
-
-                  <p class="card-text p"><small class="text-muted">July 26 1984</small></p>
-                  <p class="card-text p"><small class="text-muted">8 songs - 47min 25 sec</small></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        
-  </div>
-</div>
+      </div>
     </div>
-
     <script
-src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
     <script
@@ -164,5 +126,5 @@ integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRk
       integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
       crossorigin="anonymous"
     ></script>
-</body>
+  </body>
 </html>
