Update Music Page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Music Page</title>
+    <title>Improving Music Page</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
@@ -30,11 +30,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" href="#"
-            >Home <span class="sr-only">(current)</span></a
-          >
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#favorites">Favorties Albums</a>
+          <a class="nav-link" href="#best">Best Album</a>
+          <a class="nav-link" href="#hall">Hall Of Shame</a>
+          <a class="nav-link" href="#tapestry">Tapestry</a>
         </div>
       </div>
     </nav>
@@ -43,78 +42,308 @@
       <div class="jumbocon text-white">
         <div class="jumbotron jumbotron-fluid text-white">
           <div class="container">
-            <h1 class="display-4">Fluid jumbotron</h1>
+            <h1 class="display-4 text-center">Free Music</h1>
             <p class="lead">
-              This is a modified jumbotron that occupies the entire horizontal
-              space of its parent.
             </p>
           </div>
         </div>
       </div>
 
-      <h2 class="text-center">Favorites Albums</h2>
-      <div class="row">
-        <div class="col-3">
+      <h2 id="favorites" class="text-center">Favorites Albums</h2>
+      <div class="row g-3">
+        <div class=" col-6 col-sm-4 mb col-lg-3 mb-3">
           <div
             class="card first-card text-white text-center border-0"
             style="width: 15rem; height: 16rem"
           >
             <div class="card-body back-fade">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <h5 class="card-title">Cowboys From Hell</h5>
+              <h6 class="card-subtitle mb-2">Pantera</h6>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Heavy Metal
               </p>
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-6 col-sm-4 col-lg-3">
           <div
             class="card second-card text-white text-center border-0"
             style="width: 15rem; height: 16rem"
           >
             <div class="card-body back-fade">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <h5 class="card-title">Mutter</h5>
+              <h6 class="card-subtitle mb-2">Rammstein</h6>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Metal Industrial
               </p>
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-6 col-sm-4 col-lg-3">
           <div
             class="card third-card text-white text-center border-0"
             style="width: 15rem; height: 16rem"
           >
             <div class="card-body back-fade">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <h5 class="card-title">Rust In Peace</h5>
+              <h6 class="card-subtitle mb-2">Megadeth</h6>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Thrash metal
               </p>
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-6 col-sm-4 col-lg-3">
           <div
             class="card fourth-card text-white text-center border-0"
             style="width: 15rem; height: 16rem"
           >
             <div class="card-body back-fade">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <h5 class="card-title">Ten Thousand Fists</h5>
+              <h6 class="card-subtitle mb-2">Disturbed</h6>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Hard rock
               </p>
             </div>
           </div>
         </div>
       </div>
+
+      <h2 id="best" class="text-center">Best Album</h2>
+      <div class="card mb-3 col-12 border-0 bg-transparent">
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-9 p-0">
+            <img
+              src="https://rockfm-cdnmed.agilecontent.com/resources/jpg/1/5/1658991085551.jpg"
+              class="rounded-left img-fluid"
+              alt="Little People Start shooting Album Cover"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3 ">
+            <div class="card-body">
+              <h2 class="card-title">Ride the Lightning</h2>
+
+              <p class="card-text">Metallica</p>
+              <p class="card-text">Tash Metal</p>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item bg-dark">Fight Fire With Fire</li>
+                <li class="list-group-item bg-secondary">Ride The Lightning</li>
+                <li class="list-group-item bg-dark">For Whom The Bell Toll</li>
+                <li class="list-group-item bg-secondary">Fade To Black</li>
+                <li class="list-group-item bg-dark">Trapped Under Ice</li>
+                <li class="list-group-item bg-secondary">Escape</li>
+                <li class="list-group-item bg-dark">Creeping Death</li>
+                <li class="list-group-item bg-secondary">The Call Of Ktulu</li>
+              </ul>
+
+              <p class="card-text p">
+                <small class="text-muted">July 26 1984</small>
+              </p>
+              <p class="card-text p">
+                <small class="text-muted">8 songs - 47min 25 sec</small>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <h2 id="hall" class="text-center">Hall of Shame</h2>
+
+      <div class="row g-7">
+        <div class="col-12 col-md-6 col-lg-4">
+          <div
+            class="card shame-card text-white text-center border-0"
+            style="width: 22rem; height: 22rem"
+          >
+            <div class="card-body back-fade">
+              <h5 class="card-title">We Are Chaos</h5>
+              <h6 class="card-subtitle mb-2">Marilyn Manson</h6>
+              <p class="card-text">
+                Post-punk
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div
+            class="card shame2-card text-white text-center border-0"
+            style="width: 22rem; height: 22rem"
+          >
+            <div class="card-body back-fade">
+              <h5 class="card-title">Steal This Album</h5>
+              <h6 class="card-subtitle mb-2">System Of A Down</h6>
+              <p class="card-text">
+                Hard rock
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div
+            class="card shame3-card text-white text-center border-0"
+            style="width: 22rem; height: 22rem"
+          >
+            <div class="card-body back-fade">
+              <h5 class="card-title">Medicine At Midnight</h5>
+              <h6 class="card-subtitle mb-2">Foo Fighters</h6>
+              <p class="card-text">
+                Hard rock
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <h2 id="tapestry" class="text-center">Tapestry</h2>
+      <div class="row">
+        <img
+          src="https://i.discogs.com/Qxf5muXJ-tiNOfFkhSxFKOkVGLTTK9bqbTJu4svH2vQ/rs:fit/g:sm/q:40/h:300/w:300/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTE2NzU0/ODg5LTE2MDk2Mjc2/NTgtMjcyNy5qcGVn.jpeg"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://ae01.alicdn.com/kf/Ub60e190a176e4bcfaf82ccadc7b9f356w/Rammstein-Mutter-ru-CD.jpg"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://http2.mlstatic.com/D_NQ_NP_333121-MLA20713744871_052016-O.jpg"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://metalstorm.net/images/albums/1/1118.jpg"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://upload.wikimedia.org/wikipedia/en/4/45/StealThisAlbum.png"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://upload.wikimedia.org/wikipedia/en/2/2f/Medicine_at_Midnight.jpeg"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://i.scdn.co/image/ab67616d0000b27330d45198d0c9e8841f9a9578"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://upload.wikimedia.org/wikipedia/en/6/61/Indestructible_%28Disturbed_album%29_cover.jpg"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://ecsmedia.pl/c/metallica-b-iext120584933.jpg"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://i.ytimg.com/an/W3q8Od5qJio/b312369f-ff03-4af6-9457-2d27f337a816_mq.jpg?v=59bdc39b"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://cdns-images.dzcdn.net/images/cover/d2312f0f4424b057fec0bbfd9a84d0ce/264x264.jpg"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://ecsmedia.pl/c/sonic-firestorm-b-iext34647348.jpg"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://i.scdn.co/image/ab67616d0000b273ca41a947c13b78749c4953b1"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://a.allegroimg.com/original/115bab/0d7efea443daa0bd69df3c935989/MARILYN-MANSON-WE-ARE-CHAOS-CD"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://rockfm-cdnmed.agilecontent.com/resources/jpg/1/5/1658991085551.jpg"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://m.media-amazon.com/images/I/41o5xwkxupL._SY580_.jpg"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://cdns-images.dzcdn.net/images/cover/f0a2bbd32cdc42b5bf13f3344797bf94/264x264.jpg"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://townsquare.media/site/366/files/2020/02/the-strokes-the-new-abnormal-cover.jpg?w=3000&q=75"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://media.pitchfork.com/photos/5929ac279d034d5c69bf4140/1:1/w_450%2Cc_limit/89d69e6b.jpg"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <img
+          src="https://cdns-images.dzcdn.net/images/cover/e9f51f3751d49019726fe229caf51650/264x264.jpg"
+          class="img-thumbnail col-3 rounded-0 p-0"
+          alt="..."
+        />
+        <footer class="col-12 my-3">
+            <div class="col-4 text-light"><h5>Free Music</h5></div>
+            <div class="icons" class="col-4 text-light">
+              <div>
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="currentColor"
+                class="bi bi-discord"
+                viewBox="0 0 16 16"
+                >
+                <path
+                d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z"/>
+              </svg>
+            </div>
+            <div>
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="currentColor"
+              class="bi bi-github"
+              viewBox="0 0 16 16"
+              >
+              <path
+              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+              />
+            </svg>
+        </div>
+        <div>
+            <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            fill="currentColor"
+            class="bi bi-linkedin"
+            viewBox="0 0 16 16"
+            >
+            <path
+            d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+            />
+        </svg>
+    </div>
+</div>
+</div>
+</footer>
+      </div>
+      
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
