Button Add tracklist not functinal.

--- a/index.html
+++ b/index.html
@@ -195,12 +195,15 @@
     </tr>
   </tbody>
 </table>
+<div class="text-center">
+<button type="button" class="btn btn-dark btn-add">Add Tracklist</button>
+</div>
         </div>
       </div>
 
       <!---------------------HALL OF SHAME----------------------->
 
-      <h2 id="hall" class="text-center">Hall of Shame</h2>
+      <h2 id="hall" class="text- ">Hall of Shame</h2>
 
       <div class="row g-7">
         <div class="col-12 col-md-6 col-lg-4">
